--- a/RainDayForUAP/MainPage.xaml
+++ b/RainDayForUAP/MainPage.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
-        <rainday:RainyDayCanvas Grid.Row="1" Width="700" Height="500"/>
+        <rainday:RainyDayCanvas Grid.Row="1"/>
 
     </Grid>
 </Page>
