--- a/RainDayForUAP/RainyDaySystem/RainyDayCanvas.xaml
+++ b/RainDayForUAP/RainyDaySystem/RainyDayCanvas.xaml
@@ -14,10 +14,11 @@
             <ColumnDefinition Width ="100"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Margin="3">
+        <StackPanel Name="toolSP" Margin="3">
             <ComboBox Name="demosCB"  Margin="0,1,0,3" HorizontalAlignment="Stretch" >
             </ComboBox>
             <ToggleButton Margin="0,1,0,3" HorizontalAlignment="Stretch" Name="btnPause" Content="Pause" IsChecked="{Binding ElementName=canvas,Path=Paused,Mode=TwoWay}"/>
+            <ToggleButton Margin="0,1,0,3" HorizontalAlignment="Stretch" Name="btnFullScreen" Content="FullScreen" IsChecked="{Binding FullScreen,Mode=TwoWay}"/>
         </StackPanel>
         <Grid Grid.Column="1">
             <Rectangle Name="bg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
@@ -26,7 +27,7 @@
             <canvas:CanvasAnimatedControl  x:Name="canvas"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=bg,Path=ActualWidth}" Height="{Binding ElementName=bg,Path=ActualHeight}"
                                       Update="Canvas_Update"
                                       Draw="Canvas_Draw"
-                                      CreateResources="Canvas_CreateResources">
+                                      CreateResources="Canvas_CreateResources" PointerPressed="canvas_PointerPressed">
 
             </canvas:CanvasAnimatedControl>
         </Grid>
